--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/MileyWright/node-auth1-project#readme",
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "express": "^4.17.1",
     "knex": "^0.20.9",
     "sqlite3": "^4.1.1"
