--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/MileyWright/node-auth1-project#readme",
   "dependencies": {
     "bcrypt": "^3.0.8",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "helmet": "^3.21.2",
     "knex": "^0.20.9",
     "sqlite3": "^4.1.1"
   },
